# jira-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  distribution.md  todo-issues-jira-client-hardening.md
jira_cli/: __init__.py  cli.py  client.py  devtools.py  dotenv.py  models.py  query.py  render.py
jira_cli/tui/: __init__.py  app.py  colors.py
jira_cli/tui/features/: __init__.py
jira_cli/tui/features/comment/: __init__.py  service.py  validation.py
jira_cli/tui/features/issues/: __init__.py  widgets.py
jira_cli/tui/features/query/: __init__.py  service.py
jira_cli/tui/features/workflow/: __init__.py  service.py
jira_cli/tui/widgets/: __init__.py  issue_list.py
tests/: __init__.py  test_cli_view.py  test_models.py
