[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colenio-jira-cli"
version = "0.2.0"
description = "Modular Jira CLI tool for issue listing, filtering, and management"
readme = "README.md"
license = "MIT"
authors = [{name = "Colenio", email = "dev@colenio.com"}]
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "jira>=3.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tabulate>=0.9.0",
    "textual>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/colenio/jira-cli"
Repository = "https://github.com/colenio/jira-cli"
Issues = "https://github.com/colenio/jira-cli/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
jira-cli = "jira_cli.cli:main"
colenio-jira-cli = "jira_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jira_cli"]

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.ruff]
line-length = 120
target-version = "py311"
